--- a/Webserver/index.html
+++ b/Webserver/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Advanced Voice Chat</title>
+        <script src="client.js"></script>
     </head>
     <body>
         
