--- a/Webserver/login.html
+++ b/Webserver/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Advanced Voice Chat - Login</title>
+    <title>Login - Advanced Voice Chat</title>
 </head>
 <style>
     .container {
