--- a/Webserver/login.html
+++ b/Webserver/login.html
@@ -48,8 +48,7 @@
 
     <div class="login-container">
         <h2>Login</h2>
-        <!-- Replace XXX with the url/file path for the backend script that handles login. send the data to a server for authentication -->
-        <form action="XXX" method="post"> 
+        <form action= method="post"> 
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <br>
