--- a/Webserver/login.html
+++ b/Webserver/login.html
@@ -48,7 +48,7 @@
 
     <div class="login-container">
         <h2>Login</h2>
-        <form action= method="post"> 
+        <form action="" method="post"> 
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
             <br>
